Bug 162455 - EDITING Converting svg file to curves causes text in objects to disappear
Summary: EDITING Converting svg file to curves causes text in objects to disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.5 all versions
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords: bibisected, filter:svg, regression
: 160625 (view as bug list)
Depends on:
Blocks: SVG-filters
  Show dependency treegraph
 
Reported: 2024-08-13 19:35 UTC by Jazevedo
Modified: 2024-09-18 08:55 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file to reproduce the issue (74.55 KB, image/svg+xml)
2024-08-13 19:35 UTC, Jazevedo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jazevedo 2024-08-13 19:35:18 UTC
Created attachment 195815 [details]
Sample file to reproduce the issue

Converting an .svg file with text to curves makes the text in the .svg to disappear.

Steps to reproduce:

1 - Open Draw in Libreoffice
2 - Import the sample file to draw
3 - in draw, select the sample file, open the context menu and select: convert > to curve

Result:

The text in the .svg disappears

Expected result:

That the text does not disappear

Affected versions:

LO: 7.5, 7.6, 24.04, 24.08, 25+alpha

This does not happen on LO 7.4.7.2

Reproducible: Always

User Profile Reset: No

A bibisect of linux-64-7.5 traces the issue to this commit: 

https://git.libreoffice.org/core/+/1fa731d03ba0f22cb9392a578124ea977eaab2e9%5E%21/

> don't prescale dxarray before using DrawTextArray
> setup the device scaling instead and pass in the unscaled dxarray and at
> least give vcl the chance to retain some accuracy
> Change-Id: I17660eb77adf8586be6eb54e61bded3a5bcc20a9
> Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138448
> Tested-by: Jenkins
> Reviewed-by: Caolán McNamara <caolanm@redhat.com>

 Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 1fa731d03ba0f22cb9392a578124ea977eaab2e9
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 m_a_riosv 2024-08-14 00:20:16 UTC
Not for me on Windows.
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Raster; VCL: win Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 Jazevedo 2024-08-14 00:36:54 UTC
I just retested with: 24.8.0.3 and 25.2.0.0.alpha0+ for linux, from; 

https://downloadarchive.documentfoundation.org/

And on linux it happens with both versions. Also I am on Debian Bookworm.

 Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6c640ee2662318f32a22d8293ad7498109681933
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Aron Budea 2024-08-14 02:07:11 UTC
Confirmed using LO Version: 25.2.0.0.alpha0+ (ccdf1096a6103d2ab8690e8e97dcf3496160ecff) / Ubuntu.
Comment 4 Caolán McNamara 2024-09-12 18:55:20 UTC
*** Bug 160625 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2024-09-13 11:45:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/51f25098302e738a7d256620bd8e13bace8d060e

Resolves: tdf#162455 svg->curve causes text in objects to disappear

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-09-13 12:55:00 UTC
done in trunk, backport to 24-8 and 24-2 in gerrit
Comment 7 Commit Notification 2024-09-17 07:46:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/c4ac2aa428e6a39bbf85e6ddac3dab05068c48cb

Resolves: tdf#162455 svg->curve causes text in objects to disappear

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-09-17 07:47:19 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/11058fcbdfb226da11a9be6f600a9c1f52c6c78d

Resolves: tdf#162455 svg->curve causes text in objects to disappear

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jazevedo 2024-09-18 08:55:43 UTC
Tested this and the text no longer disappears. 

Thanks for the patches Caolán.

Tested on: 

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 905e7c1105536c9757fa2c2faf670738aab02595
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 24.8.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 04a33cd368ab77c636160915e4ac4721b7e10c5e
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Version: 24.2.7.0.0+ (X86_64) / LibreOffice Community
Build ID: 93a78d4a90cdc41d166e65d402ac244f4fa376ec
CPU threads: 20; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded