Resolves: tdf#162455 svg->curve causes text in objects to disappear

Rather than assuming there is a uniform unchanging MapMode scaling,
follow the same pattern as SVGWriter and map positions/sizes back
relative to the original MapMode.

Examples of #i119125#, tdf#162455 and tdf#160625 work

Change-Id: I8229cebee6173fa4905828afb3b973c80ede3315
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173126
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>